# certification-tool-cli

./: .gitignore  README.md  cli.sh  openapi.json  pyproject.toml
.github/workflows/: python-lint.yml
app/: client.py  config.py  exceptions.py  main.py  utils.py  validation.py
app/api_lib_autogen/: __init__.py  api_client.py  models.py
app/api_lib_autogen/api/: devices_api.py  operators_api.py  projects_api.py  test_collections_api.py  test_run_configs_api.py  test_run_executions_api.py  utils_api.py  versions_api.py
app/commands/: __init__.py  available_tests.py  project.py  run_tests.py  run_tests_cli.py  status.py  test_run_execution_history.py  test_runner_status.py  versions.py
app/test_run/: logging.py  prompt_manager.py  socket_schemas.py  websocket.py
csa_certification_cli/: client.py  config.py  exceptions.py  main.py  utils.py  validation.py
csa_certification_cli/api_lib_autogen/: __init__.py  api_client.py
csa_certification_cli/api_lib_autogen/api/: devices_api.py  operators_api.py  projects_api.py  test_collections_api.py  test_run_configs_api.py  test_run_executions_api.py  utils_api.py  versions_api.py
csa_certification_cli/commands/: available_tests.py  project.py  run_tests.py  run_tests_cli.py  test_run_execution_history.py  test_runner_status.py  versions.py
csa_certification_cli/test_run/: logging.py  websocket.py
scripts/: check_deps.py  format.sh  generate_client.sh  lint.sh  run_pytest.py  th_cli_install.sh
tests/: README.md  __init__.py  conftest.py  test_abort_testing.py  test_available_tests.py  test_project_commands.py  test_run_tests.py  test_test_run_execution.py  test_test_runner_status.py  test_utils.py
th_cli/: camera_config.properties  colorize.py  config.py  exceptions.py  main.py  shared_constants.py  utils.py  validation.py
th_cli/api_lib_autogen/: api_client.py  models.py
th_cli/commands/: abort_testing.py  available_tests.py  project.py  run_tests.py  test_run_execution.py  test_run_execution_history.py  test_run_execution_log.py  test_runner_status.py  versions.py
th_cli/test_run/: prompt_manager.py  socket_schemas.py  websocket.py
th_cli/test_run/camera/: __init__.py  camera_http_server.py  camera_stream_handler.py  two_way_talk_verification.html  video_verification.html  webrtc_session.py  websocket_manager.py
th_cli/th_utils/: __init__.py  ffmpeg_converter.py
